[metadata]
name = natter
description = A terminal-based ollama chat interface
version = attr: natter.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davep/natter
author = Dave Pearson
author_email = davep@davep.org
maintainer = Dave Pearson
maintainer_email = davep@davep.org
license = License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
license_files = LICENCE
keywords = terminal
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Environment :: Console
    Development Status :: 3 - Alpha
    Intended Audience :: End Users/Desktop
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet
    Topic :: Terminals
    Typing :: Typed
project_urls =
   Documentation = https://github.com/davep/natter/blob/main/README.md
   Source = https://github.com/davep/natter
   Issues = https://github.com/davep/natter/issues
   Discussions = https://github.com/davep/natter/discussions

[options]
packages = find:
platforms = any
include_package_data = True
python_requires = >=3.10,<3.13
install_requires =
    textual>=0.48.2
    ollama
    xdg-base-dirs
    textual-fspicker

[options.entry_points]
console_scripts =
    natter = natter.__main__:run

### setup.cfg ends here
